--- a/custom/themes/ingenuity/src/sass/layout/_services.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_services.scss
@@ -21,12 +21,12 @@
 }
 
 .services-testimonial {
-	padding: 25px 40px 25px 0;
+	padding: 0 40px 25px 0;
 	blockquote {
 		margin: 0;
 		font-style: italic;
-		font-size: modular-scale(1, 1.2rem);
-		line-height: modular-scale(1, 1.2rem);
+		font-size: modular-scale(1, 1.3rem);
+		line-height: modular-scale(1, 1.4rem);
 		font-weight: 400;
 	}
 	p {
