Update: services page

--- a/custom/themes/ingenuity/src/sass/layout/_services.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_services.scss
@@ -28,6 +28,7 @@
 		font-size: modular-scale(1, 1.3rem);
 		line-height: modular-scale(1, 1.4rem);
 		font-weight: 400;
+		font-family: $lite-headings;
 	}
 	p {
 		padding-top: 20px;
