--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -4231,7 +4231,8 @@ aside {
     font-style: italic;
     font-size: 1.7329rem;
     line-height: 1.8662rem;
-    font-weight: 400; }
+    font-weight: 400;
+    font-family: "Audimat3000-Leger", sans-serif; }
   .services-testimonial p {
     padding-top: 20px;
     padding-right: 20px;
