--- a/custom/themes/ingenuity/src/sass/layout/_services.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_services.scss
@@ -30,7 +30,7 @@
 		font-weight: 400;
 		font-family: $lite-headings;
 		&:before {
-		    content: '"';
+		    content: '“';
 		    position: absolute;
 		    margin-left: -.4em;
 		    font-size: modular-scale(3, 1.3rem);
@@ -38,7 +38,7 @@
 		}
 
 		&:after {
-		    content: '"';
+		    content: '”';
 		    font-family: $main-headings;
 		}
 	}
