--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -51,27 +51,28 @@ body.no_scroll {
 
   body.no_scroll .expanded {
     /*padding-right: 7px;*/
-    background: rgba(255,255,255,.98); /* because FF no blur, reduce bg transparency */
+    background: rgba(252, 216, 56,.98); /* because FF no blur, reduce bg transparency */
   }
 }
 
 
 
 /* === TOP MENU LAYOUT === */
-/* ======================= */
 
 nav {
-  color: #333;
-  background-color: $white;
+  color: $black;
+  background-color: $yellow;
   font-family: $main-headings;
   font-size: modular-scale(2);
+  letter-spacing: 3px;
   position: absolute;
+  box-shadow: 0px 0px 7px rgba(0,0,0, 0.4);
   top: 0;
   width: 100%;
   height: 80px; /* smaller height because font is smaller */
   // padding-top: 25px;
   right: 0;
-  z-index: 8000000000000000;
+  z-index: 900;
   cursor: pointer;
   overflow: hidden;
   -webkit-transform: translate(0,0);
@@ -109,15 +110,15 @@ nav:hover {
 
 /* limits width of menu to site width */
 .site-width {
-  max-width: 740px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 0 2%;
+  padding: 0 15%;
 }
 
 /* name of site in main menu (not user selectable) */
 .site-width>a {
   font-weight: bold;
-  color: #555;
+  color: $black;
   line-height: 1.9em;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -141,7 +142,7 @@ nav.invisible {
 /* when shown & detached position is fixed */
 nav.detached {
   position: fixed;
-  background: rgba(255,255,255,.9);
+  background: rgba(252, 216, 56,0.9);
   -webkit-transition: -webkit-transform .3s, height .3s, background .4s, opacity .3s;
   -moz-transition: -moz-transform .3s, height .3s, background .4s, opacity .3s;
   -o-transition: -o-transform .3s, height .3s, background .4s, opacity .3s;
@@ -159,7 +160,7 @@ nav.expanded {
   height: 100%;
   position: fixed;
   cursor: default;
-  background: rgba(255,255,255,.85);
+  background: rgba(252, 216, 56,0.95);
 }
 
 /* positions navigation content */
@@ -169,7 +170,7 @@ nav.expanded {
   -o-transform: translate(0,-700px);
   transform: translate(0,-700px);
   opacity: 0;
-  padding-top: 2em;
+  padding-top: 1em;
   width: 50%;
   margin: 0 auto;
   text-align: center;
@@ -180,10 +181,35 @@ nav.expanded {
 }
 
 #navigation ul {
+  text-transform: uppercase;
+  text-align: left;
   list-style-type: none;
   padding: 0;
+  a {
+    color: $black;
+    transition: all 0.5s;
+    &:hover{
+      background-color: $white;
+    }
+  }
   li {
     padding: 0;
+    font-size: modular-scale(3,1rem);
+    line-height: modular-scale(3,1rem);
+    font-weight: 400;
+    font-family: $main-headings;
+    ul {
+      li {
+        font-size: modular-scale(2,1rem);
+        line-height: modular-scale(2,1rem);
+        padding-left: 20px;
+        font-weight: 300;
+        font-family: $lite-headings;
+        span {
+          // padding: 5px;
+        }
+      }
+    }
   }
 }
 
@@ -215,7 +241,7 @@ nav.expanded #navigation {
 
 /* hides extra text of icon (accessibility) */
 .icon span {
-  display: none;
+  // display: none;
 }
 
 /* on focus, don’t show outline */
@@ -225,7 +251,7 @@ nav.expanded #navigation {
 
 /* icon colour */
 .icon:before, .icon:active:before {
-  color: $yellow;
+  color: $black;
 }
 
 /* changes colour on hover or keyboard focus */
@@ -273,7 +299,16 @@ nav.expanded #navigation {
 
 // =======================================
 
+span.menu-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-
-
-
+#nav-menu-text {
+  font-family: $p-font;
+  font-weight: 300;
+  text-transform: uppercase;
+  font-size: modular-scale(0, 0.9rem);
+  // margin-top: 5px;
+}
