--- a/custom/themes/ingenuity/src/sass/layout/_header.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_header.scss
@@ -62,8 +62,8 @@
 	@include justify-content(center);
 	hgroup {
 		@include display(flex);
-		@include align-items(center);
-		@include justify-content(center);
+		// @include align-items(center);
+		// @include justify-content(center);
 		@include flex-direction(column);
 	}
 }
@@ -83,22 +83,21 @@
 .default-hero {
 	width: 100%;
 	min-height: 100vh;
+	position: relative;
+	figure {
+		position: absolute;
+		top: 0;
+		left: 0;
+		background-position: center center;
+		width: 100%;
+		height: 100%;
+		filter: grayscale(80%) brightness(0.6) opacity(1);
+		z-index: 50;
+	}
 	hgroup {
-		// margin-top: 100px;
-		h1 {
-			// background-color: $yellow;
-			// text-align: left;
-			// margin: 0;
-			// margin-right: 25%;
-			// padding: 0;
-		}
-		h2 {
-			// margin: 0;
-			// margin-top: 25px;
-			// text-align: left;
-			// margin-right: 40%;
-			// background-color: $black;
-		}
+		position: relative;
+		z-index: 51;
+		margin-top: 100px;
 	}
 }
 
