--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -147,8 +147,8 @@ span.black-highlight {
 
 .default-hero {
 	h1 {
-		font-size: modular-scale(5);
-		line-height:modular-scale(5);
+		font-size: modular-scale(5, 1.3rem);
+		line-height:modular-scale(5, 1.3rem);
 		margin: 0 10%;
 		padding-bottom: 0;
 		color: $white;
@@ -163,7 +163,7 @@ span.black-highlight {
 
 		letter-spacing: 1px;
 		text-align: left;
-		margin: 0 10%;
+		margin: 0 20% 0 12%;
 	}
 }
 
@@ -190,10 +190,12 @@ main {
 	}
 }
 
-.main-content {
+.main-content,
+.blog-entry {
 	h1, h2, h3, h4, h5, h6 {
 		color: $black;
-		margin-bottom: 20px;
+		margin-bottom: 10px;
+		margin-top: 50px;
 	}
 	p {
 		margin-bottom: 20px;
