--- a/custom/themes/ingenuity/src/sass/layout/_main.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_main.scss
@@ -6,7 +6,7 @@
   left: 0;
   overflow: hidden;
   z-index: -100;
-  filter: grayscale(80%);
+  filter: grayscale(80%) brightness(0.8) opacity(1);
 }
 
 .fullscreen-bg__video {
