--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -139,9 +139,15 @@ span.black-highlight {
 		text-align: center;
 		margin: 20px 125px;
 		@include media($bp-large) {
-		    font-size: modular-scale(2); 
-			line-height: modular-scale(2); 
+		    font-size: modular-scale(3); 
+			line-height: modular-scale(3); 
 		}
+	}
+}
+
+.home-hero {
+	h2 {
+		text-align: left;
 	}
 }
 
