--- a/custom/themes/ingenuity/src/sass/layout/_header.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_header.scss
@@ -71,7 +71,7 @@
 .home-hero {
 	min-height: 100vh;
 	hgroup {
-		margin-top: 100px;
+		// margin-top: 100px;
 		img {
 			width: 200px;
 			height: auto;
