--- a/custom/themes/ingenuity/src/sass/style.scss
+++ b/custom/themes/ingenuity/src/sass/style.scss
@@ -27,6 +27,7 @@
 @import "layout/header";
 @import "layout/main";
 @import "layout/sidebar";
+@import "layout/home";
 @import "layout/services";
 @import "layout/team";
 @import "layout/projects";
