--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -484,8 +484,11 @@ span.black-highlight {
   @media screen and (min-width: 50em) {
     .home-hero h2,
     .default-hero h2 {
-      font-size: 2.66533rem;
-      line-height: 2.66533rem; } }
+      font-size: 3.55289rem;
+      line-height: 3.55289rem; } }
+
+.home-hero h2 {
+  text-align: left; }
 
 .default-hero h1 {
   font-size: 5.47134rem;
@@ -688,12 +691,12 @@ body.no_scroll {
 
   body.no_scroll .expanded {
     /*padding-right: 7px;*/
-    background: rgba(252, 216, 56, 0.98);
+    background: rgba(0, 0, 0, 0.98);
     /* because FF no blur, reduce bg transparency */ } }
 /* === TOP MENU LAYOUT === */
 nav {
-  color: black;
-  background-color: #fcd838;
+  color: #fcd838;
+  background-color: black;
   font-family: "Audimat3000-Regulier", sans-serif;
   font-size: 2.66533rem;
   letter-spacing: 3px;
@@ -730,7 +733,7 @@ nav {
             transform: translate(0, 0); } }
 /* on navigation hover add slight white bg */
 nav:hover {
-  background: rgba(255, 255, 255, 0.7); }
+  background: rgba(0, 0, 0, 0.7); }
 
 /* limits width of menu to site width */
 .site-width {
@@ -741,7 +744,7 @@ nav:hover {
 /* name of site in main menu (not user selectable) */
 .site-width > a {
   font-weight: bold;
-  color: black;
+  color: #fcd838;
   line-height: 1.9em;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -761,7 +764,7 @@ nav.invisible {
 /* when shown & detached position is fixed */
 nav.detached {
   position: fixed;
-  background: rgba(252, 216, 56, 0.9);
+  background: rgba(0, 0, 0, 0.9);
   -webkit-transition: -webkit-transform .3s, height .3s, background .4s, opacity .3s;
   transition: transform .3s, height .3s, background .4s, opacity .3s; }
 
@@ -774,6 +777,8 @@ nav.expanded {
   position: fixed;
   cursor: default;
   background: rgba(252, 216, 56, 0.95); }
+  nav.expanded .site-width > a {
+    color: black; }
 
 /* positions navigation content */
 #navigation {
@@ -781,7 +786,6 @@ nav.expanded {
   -ms-transform: translate(0, -700px);
       transform: translate(0, -700px);
   opacity: 0;
-  padding-top: 1em;
   width: 50%;
   margin: 0 auto;
   text-align: center;
@@ -844,7 +848,7 @@ nav.expanded #navigation {
 
 /* icon colour */
 .icon:before, .icon:active:before {
-  color: black; }
+  color: #fcd838; }
 
 /* changes colour on hover or keyboard focus */
 .icon:hover:before, .icon:focus:before {
@@ -3429,12 +3433,10 @@ Copyright (c) 2015 Daniel Eden
 
 .home-hero {
   min-height: 100vh; }
-  .home-hero hgroup {
-    margin-top: 100px; }
-    .home-hero hgroup img {
-      width: 200px;
-      height: auto;
-      margin-bottom: 25px; }
+  .home-hero hgroup img {
+    width: 200px;
+    height: auto;
+    margin-bottom: 25px; }
 
 .default-hero {
   width: 100%;
@@ -3469,8 +3471,8 @@ nav.nav__mobile {
   left: 0;
   overflow: hidden;
   z-index: -100;
-  -webkit-filter: grayscale(80%);
-          filter: grayscale(80%); }
+  -webkit-filter: grayscale(80%) brightness(0.8) opacity(1);
+          filter: grayscale(80%) brightness(0.8) opacity(1); }
 
 .fullscreen-bg__video {
   position: absolute;
@@ -3734,6 +3736,109 @@ aside {
   padding-left: 0;
   padding-bottom: 0; }
 
+.rw-wrapper {
+  position: relative;
+  margin: 110px auto 0 auto;
+  font-family: "Audimat3000-Regulier", sans-serif;
+  padding: 10px; }
+
+.rw-sentence {
+  margin: 0;
+  text-align: left; }
+
+.rw-sentence span {
+  font-size: 100%;
+  font-weight: normal;
+  text-align: center; }
+
+#move-over {
+  padding-left: 350px;
+  font-size: 100%; }
+
+.rw-words {
+  display: inline; }
+
+.rw-words-1 span {
+  position: absolute;
+  opacity: 0;
+  overflow: hidden;
+  color: #fcd838;
+  -webkit-animation: rotateWord 18s linear infinite 0s;
+  animation: rotateWord 18s linear infinite 0s; }
+
+.rw-words-1 span:nth-child(2) {
+  -webkit-animation-delay: 3s;
+  animation-delay: 3s;
+  color: #fcd838; }
+
+.rw-words-1 span:nth-child(3) {
+  -webkit-animation-delay: 6s;
+  animation-delay: 6s;
+  color: #fcd838; }
+
+.rw-words-1 span:nth-child(4) {
+  -webkit-animation-delay: 9s;
+  animation-delay: 9s;
+  color: #fcd838; }
+
+.rw-words-1 span:nth-child(5) {
+  -webkit-animation-delay: 12s;
+  animation-delay: 12s;
+  color: #fcd838; }
+
+.rw-words-1 span:nth-child(6) {
+  -webkit-animation-delay: 15s;
+  animation-delay: 15s;
+  color: #fcd838; }
+
+@-webkit-keyframes rotateWord {
+  0% {
+    opacity: 0; }
+  2% {
+    opacity: 0;
+    -webkit-transform: translateY(-30px); }
+  5% {
+    opacity: 1;
+    -webkit-transform: translateY(0px); }
+  17% {
+    opacity: 1;
+    -webkit-transform: translateY(0px); }
+  20% {
+    opacity: 0;
+    -webkit-transform: translateY(30px); }
+  80% {
+    opacity: 0; }
+  100% {
+    opacity: 0; } }
+@keyframes rotateWord {
+  0% {
+    opacity: 0; }
+  2% {
+    opacity: 0;
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px); }
+  5% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px); }
+  17% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px); }
+  20% {
+    opacity: 0;
+    -webkit-transform: translateY(30px);
+    transform: translateY(30px); }
+  80% {
+    opacity: 0; }
+  100% {
+    opacity: 0; } }
+@media screen and (max-width: 768px) {
+  .rw-sentence {
+    font-size: 18px; } }
+@media screen and (max-width: 320px) {
+  .rw-sentence {
+    font-size: 9px; } }
 .two-column {
   margin: 60px 0;
   display: -webkit-box;
@@ -3815,7 +3920,8 @@ aside {
     margin-top: 25px;
     text-align: right; }
   .services-testimonial h5 {
-    text-align: right; }
+    text-align: right;
+    margin: 0; }
   .services-testimonial p {
     padding-top: 20px;
     padding-right: 20px;
