--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -601,15 +601,20 @@ h2.team__hero-subheading {
   letter-spacing: 1px; }
 
 .team__name {
-  font-size: 11.21766rem;
-  line-height: 11.21766rem; }
+  font-size: 14.95314rem;
+  line-height: 11.21766rem;
+  position: relative; }
 
 .team__title {
-  font-size: 2.66533rem; }
+  font-size: 1.9995rem;
+  line-height: 1.9995rem;
+  padding-left: 13px; }
 
 .team__creds {
+  position: relative;
   font-size: 1.5rem;
-  line-height: 1.5rem; }
+  line-height: 1.5rem;
+  margin-left: -50px; }
 
 .team__single h3,
 .team__single figcaption {
@@ -805,8 +810,8 @@ nav.expanded {
       background-color: white; }
   #navigation ul li {
     padding: 0;
-    font-size: 2.36859rem;
-    line-height: 2.36859rem;
+    font-size: 3.7888rem;
+    line-height: 3.7888rem;
     font-weight: 400;
     font-family: "Audimat3000-Regulier", sans-serif; }
     #navigation ul li ul li {
@@ -3763,7 +3768,7 @@ aside {
   text-align: center; }
 
 #move-over {
-  padding-left: 650px;
+  padding-left: 630px;
   font-size: 100%; }
 
 .rw-words {
@@ -3965,7 +3970,7 @@ aside {
 
 .team__container {
   position: relative;
-  padding: 0 50px;
+  padding: 0;
   display: -webkit-box;
   display: -moz-box;
   display: box;
@@ -4002,9 +4007,39 @@ aside {
     position: relative;
     min-height: 300px;
     width: 100%;
-    margin-bottom: 25px;
     -webkit-transition: all 0.3s;
-            transition: all 0.3s; }
+            transition: all 0.3s;
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+    box-align: start;
+    -webkit-align-items: flex-start;
+    -moz-align-items: flex-start;
+    -ms-align-items: flex-start;
+    -o-align-items: flex-start;
+    align-items: flex-start;
+    -ms-flex-align: start;
+    -webkit-box-pack: center;
+    box-pack: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    -ms-justify-content: center;
+    -o-justify-content: center;
+    justify-content: center;
+    -ms-flex-pack: center;
+    -webkit-box-orient: vertical;
+    box-orient: vertical;
+    -webkit-box-direction: normal;
+    box-direction: normal;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-direction: column; }
     .team__container .team__single:hover {
       cursor: pointer;
       background-color: #fbce06; }
