--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -603,19 +603,26 @@ h2.team__hero-subheading {
 .team__name {
   font-size: 14.95314rem;
   line-height: 11.21766rem;
-  position: relative; }
+  position: relative;
+  color: rgba(0, 0, 0, 0.8);
+  -webkit-transition: all 0.5s;
+          transition: all 0.5s; }
 
 .team__title {
   font-size: 1.9995rem;
   line-height: 1.9995rem;
-  padding-left: 13px; }
+  padding-left: 13px;
+  color: rgba(0, 0, 0, 0.8);
+  -webkit-transition: all 0.5s;
+          transition: all 0.5s; }
 
 .team__creds {
   position: absolute;
   bottom: 20px;
   right: -150px;
   font-size: 1.5rem;
-  line-height: 1.5rem; }
+  line-height: 1.5rem;
+  color: rgba(0, 0, 0, 0.8); }
 
 .team__single h3,
 .team__single figcaption {
@@ -4008,8 +4015,8 @@ aside {
     position: relative;
     min-height: 300px;
     width: 100%;
-    -webkit-transition: all 0.3s;
-            transition: all 0.3s;
+    -webkit-transition: all 0.5s;
+            transition: all 0.5s;
     display: -webkit-box;
     display: -moz-box;
     display: box;
@@ -4043,7 +4050,11 @@ aside {
     -ms-flex-direction: column; }
     .team__container .team__single:hover {
       cursor: pointer;
-      background-color: #fbce06; }
+      background-color: black; }
+      .team__container .team__single:hover hgroup h3,
+      .team__container .team__single:hover hgroup h4,
+      .team__container .team__single:hover .team__creds {
+        color: #fcd838; }
     .team__container .team__single figure {
       position: absolute;
       top: 0;
@@ -4058,7 +4069,9 @@ aside {
     .team__container .team__single hgroup {
       position: relative;
       padding: 0 25px;
-      z-index: 4; }
+      z-index: 4;
+      -webkit-transition: all 0.5s;
+              transition: all 0.5s; }
 
 .drop-down-panel {
   padding: 50px 25%;
