--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -361,8 +361,22 @@ h2.team__hero-subheading {
 .projects__panel {
 	h2 {
 		color: $white;
-		font-size: modular-scale(5);
-		line-height: modular-scale(5);
+		font-size: modular-scale(3, 1.3rem);
+		line-height:modular-scale(3);
+		position: relative;
+		transition: all 0.5s;
+		@include media($bp-med) {
+			font-size: modular-scale(4, 1.3rem);
+			line-height: modular-scale(4);
+		}
+		@include media($bp-large) {
+			font-size: modular-scale(5, 1.3rem);
+			line-height: modular-scale(5);
+		}
+		@include media($bp-xlarge) {
+			font-size: modular-scale(6, 1.3rem);
+			line-height: modular-scale(6);
+		}
 	}
 }
 
