--- a/custom/themes/ingenuity/src/sass/layout/_grid-settings.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_grid-settings.scss
@@ -10,7 +10,7 @@ $max-width: em(1100);
 // Major: Content centric breakpoints
 $bp-xlarge: new-breakpoint(min-width 80em 12);
 $bp-large: new-breakpoint(min-width 50em 12);
-$bp-med: new-breakpoint(max-width 30em 12);
+$bp-med: new-breakpoint(min-width 30em 12);
 $bp-small: new-breakpoint(max-width 30em 5);
 
 $bp-ls-small: new-breakpoint(max-height 25em 5);
