--- a/custom/themes/ingenuity/src/sass/layout/_projects.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_projects.scss
@@ -5,15 +5,16 @@
 
 .projects__panel {
 	width: 100%;
-	height: 250px;
+	height: 300px;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
-	margin-bottom: 40px;
+	// margin-bottom: 40px;
 	position: relative;
 	transition: all 0.5s;
 	filter: grayscale(0.7);
 	// -webkit-transform: skew(16deg, 0);
+	padding: 25px;
 	@include display(flex);
 	@include align-items(center);
 	@include justify-content(center);
