--- a/custom/themes/ingenuity/src/sass/components/_gallery.scss
+++ b/custom/themes/ingenuity/src/sass/components/_gallery.scss
@@ -1,11 +1,71 @@
 .project__gallery {
-    height: 500px;
     // margin-left: -50%;
     // margin-right: -50%;
+    width: 100%;
+    position: relative;
+    @include display(flex);
+    @include align-items(flex-start);
+    @include justify-content(center);
+    @include flex-direction(column);
+    @include media($bp-large) {
+        @include flex-direction(row);
+        @include flex-wrap(wrap);
+    }
 }
 
 .gallery {
-    height: 500px;
+    // height: 500px;
+}
+
+.gallery__single {
+    margin: 0 0 30px;
+    position: relative;
+    @include flex(0 0 100%);
+    @include display(flex);
+    @include align-items(flex-start);
+    @include justify-content(center);
+    @include flex-direction(column);
+    @include media($bp-large) {
+        @include flex-direction(row);
+    }
+}
+
+.gallery__single-half {
+    max-height: 100vh;
+    @include media($bp-large) {
+        @include flex(0 0 50%);
+        // max-height: 450px;
+    }
+    @include media($bp-small) {
+        height: 100vh;
+    }
+}
+
+.gallery__single-half.gallery-image {
+    position: relative;
+    img {
+        position: relative;
+        width: auto;
+        max-height: 500px;
+        padding-right: 25px;
+    }
+}
+
+.gallery__single-half.gallery-caption {
+    position: relative;
+    background-color: $yellow;
+    padding: 25px;
+    p {
+        margin: 0;
+    }
+}
+
+.gallery__single:nth-child(even) .gallery__single-half.gallery-image {
+    @include order(2);
+    img {
+        padding-right: 0;
+        padding-left: 25px;
+    }
 }
 
 .cell {
