--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -607,7 +607,7 @@ h2.team__hero-subheading {
   color: rgba(0, 0, 0, 0.8);
   -webkit-transition: all 0.5s;
           transition: all 0.5s; }
-  @media screen and (max-width: 30em) {
+  @media screen and (min-width: 30em) {
     .team__name {
       font-size: 6.31309rem;
       line-height: 4.736rem; } }
@@ -657,7 +657,7 @@ h2.team__hero-subheading {
   position: relative;
   -webkit-transition: all 0.5s;
           transition: all 0.5s; }
-  @media screen and (max-width: 30em) {
+  @media screen and (min-width: 30em) {
     .projects__panel h2 {
       font-size: 4.10453rem;
       line-height: 4.736rem; } }
@@ -938,10 +938,146 @@ span.menu-icon {
   font-size: 0.9rem; }
 
 .project__gallery {
-  height: 500px; }
+  width: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  box-align: start;
+  -webkit-align-items: flex-start;
+  -moz-align-items: flex-start;
+  -ms-align-items: flex-start;
+  -o-align-items: flex-start;
+  align-items: flex-start;
+  -ms-flex-align: start;
+  -webkit-box-pack: center;
+  box-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  -o-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  -webkit-box-orient: vertical;
+  box-orient: vertical;
+  -webkit-box-direction: normal;
+  box-direction: normal;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-direction: column; }
+  @media screen and (min-width: 50em) {
+    .project__gallery {
+      -webkit-box-orient: horizontal;
+      box-orient: horizontal;
+      -webkit-box-direction: normal;
+      box-direction: normal;
+      -webkit-flex-direction: row;
+      -moz-flex-direction: row;
+      flex-direction: row;
+      -ms-flex-direction: row;
+      -webkit-box-lines: multiple;
+      -moz-box-lines: multiple;
+      box-lines: multiple;
+      -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap; } }
 
-.gallery {
-  height: 500px; }
+.gallery__single {
+  margin: 0 0 30px;
+  position: relative;
+  -webkit-box-flex: 0;
+  box-flex: 0;
+  -webkit-flex: 0 0 100%;
+  -moz-flex: 0 0 100%;
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  box-align: start;
+  -webkit-align-items: flex-start;
+  -moz-align-items: flex-start;
+  -ms-align-items: flex-start;
+  -o-align-items: flex-start;
+  align-items: flex-start;
+  -ms-flex-align: start;
+  -webkit-box-pack: center;
+  box-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  -o-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  -webkit-box-orient: vertical;
+  box-orient: vertical;
+  -webkit-box-direction: normal;
+  box-direction: normal;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-direction: column; }
+  @media screen and (min-width: 50em) {
+    .gallery__single {
+      -webkit-box-orient: horizontal;
+      box-orient: horizontal;
+      -webkit-box-direction: normal;
+      box-direction: normal;
+      -webkit-flex-direction: row;
+      -moz-flex-direction: row;
+      flex-direction: row;
+      -ms-flex-direction: row; } }
+
+.gallery__single-half {
+  max-height: 100vh; }
+  @media screen and (min-width: 50em) {
+    .gallery__single-half {
+      -webkit-box-flex: 0;
+      box-flex: 0;
+      -webkit-flex: 0 0 50%;
+      -moz-flex: 0 0 50%;
+      -ms-flex: 0 0 50%;
+      flex: 0 0 50%; } }
+  @media screen and (max-width: 30em) {
+    .gallery__single-half {
+      height: 100vh; } }
+
+.gallery__single-half.gallery-image {
+  position: relative; }
+  .gallery__single-half.gallery-image img {
+    position: relative;
+    width: auto;
+    max-height: 500px;
+    padding-right: 25px; }
+
+.gallery__single-half.gallery-caption {
+  position: relative;
+  background-color: #fcd838;
+  padding: 25px; }
+  .gallery__single-half.gallery-caption p {
+    margin: 0; }
+
+.gallery__single:nth-child(even) .gallery__single-half.gallery-image {
+  -webkit-box-ordinal-group: 2;
+  box-ordinal-group: 2;
+  -webkit-order: 2;
+  -moz-order: 2;
+  order: 2;
+  -ms-flex-order: 2; }
+  .gallery__single:nth-child(even) .gallery__single-half.gallery-image img {
+    padding-right: 0;
+    padding-left: 25px; }
 
 .cell {
   height: 100%;
@@ -3507,7 +3643,7 @@ Copyright (c) 2015 Daniel Eden
 
 nav.nav__mobile {
   display: none; }
-  @media screen and (max-width: 30em) {
+  @media screen and (min-width: 30em) {
     nav.nav__mobile {
       display: block; } }
 
@@ -3689,7 +3825,7 @@ nav.main-nav {
       -moz-flex-direction: row;
       flex-direction: row;
       -ms-flex-direction: row; } }
-  @media screen and (max-width: 30em) {
+  @media screen and (min-width: 30em) {
     .cta-contact {
       margin-top: 25px; } }
 
@@ -4171,7 +4307,7 @@ aside {
   padding-left: 30px;
   padding-top: 10px;
   padding-bottom: 10px; }
-  @media screen and (max-width: 30em) {
+  @media screen and (min-width: 30em) {
     .project__testimonial blockquote {
       margin-right: -10px; } }
   @media screen and (max-width: 30em) {
