Update: home video widget, contact CPT, styles

--- a/custom/themes/ingenuity/src/sass/components/_gallery.scss
+++ b/custom/themes/ingenuity/src/sass/components/_gallery.scss
@@ -31,7 +31,8 @@
 }
 
 .gallery__single-half {
-    max-height: 100vh;
+    position: relative;
+    min-height: 100vh;
     @include media($bp-large) {
         @include flex(0 0 50%);
         // max-height: 450px;
@@ -45,8 +46,8 @@
     position: relative;
     img {
         position: relative;
-        width: auto;
-        max-height: 500px;
+        width: 100%;
+        max-height: auto;
         padding-right: 25px;
     }
 }
@@ -55,6 +56,7 @@
     position: relative;
     background-color: $yellow;
     padding: 25px;
+    min-height: auto;
     p {
         margin: 0;
     }
