--- a/custom/themes/ingenuity/src/sass/style.scss
+++ b/custom/themes/ingenuity/src/sass/style.scss
@@ -28,6 +28,7 @@
 @import "layout/main";
 @import "layout/sidebar";
 @import "layout/home";
+@import "layout/about";
 @import "layout/services";
 @import "layout/team";
 @import "layout/projects";
